@@ -1,6 +1,9 @@
 package com.hust.hustforces.service.impl;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
+import com.hust.hustforces.enums.LanguageId;
+import com.hust.hustforces.enums.SubmissionResult;
+import com.hust.hustforces.enums.SubmissionState;
 import com.hust.hustforces.exception.ResourceNotFoundException;
 import com.hust.hustforces.mapper.SubmissionMapper;
 import com.hust.hustforces.model.dto.*;
@@ -10,10 +13,12 @@ import com.hust.hustforces.model.dto.submission.TestCaseDto;
 import com.hust.hustforces.model.entity.*;
 import com.hust.hustforces.repository.ProblemRepository;
 import com.hust.hustforces.repository.SubmissionRepository;
+import com.hust.hustforces.repository.TestCaseRepository;
 import com.hust.hustforces.repository.UserRepository;
 import com.hust.hustforces.service.ProblemService;
 import com.hust.hustforces.service.SubmissionService;
 import com.hust.hustforces.utils.LanguageMapping;
+import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.coyote.BadRequestException;
@@ -24,10 +29,8 @@ import org.springframework.stereotype.Service;
 import org.springframework.web.client.RestTemplate;
 
 import java.io.IOException;
-import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
+import java.util.concurrent.CompletableFuture;
 import java.util.stream.Collectors;
 
 @Service
@@ -44,55 +47,63 @@ public class SubmissionServiceImpl implements SubmissionService {
     private final SubmissionRepository submissionRepository;
     private final ProblemRepository problemRepository;
     private final ProblemService problemService;
-    private final LanguageMapping languageMapping;
-    private final RestTemplate restTemplate;
     private final UserRepository userRepository;
+    private final TestCaseRepository testCaseRepository;
     private final SubmissionMapper submissionMapper;
+    private final SubmissionCacheService cacheService;
+    private final Judge0Client judge0Client;
+    private final LanguageMapping languageMapping;
+
+    // Simple rate limiter - allow up to 10 submissions per minute per user
+    private final Map<String, List<Long>> userSubmissionTimestamps = new HashMap<>();
+    private final int MAX_SUBMISSIONS_PER_MINUTE = 10;
+    private final Object rateLimitLock = new Object();
 
     @Override
+    @Transactional
     public SubmissionDetailDto createSubmission(SubmissionRequest input, String userId) throws IOException {
+        // Apply rate limiting
+        if (!checkRateLimit(userId)) {
+            throw new IllegalStateException("Rate limit exceeded. Please wait before submitting again.");
+        }
+
         Problem problem = problemRepository.findById(input.getProblemId()).orElseThrow(
                 () -> new ResourceNotFoundException("Problem", "id", input.getProblemId())
         );
 
-        ProblemDetails problemDetails = problemService.getProblem(problem.getSlug(), input.getLanguageId());
-        String fullCode = problemDetails.getFullBoilerplateCode().replace("##USER_CODE_HERE##", input.getCode());
-
+        // Create submission entity first
         Submission submission = new Submission();
         submission.setUserId(userId);
         submission.setProblemId(input.getProblemId());
         submission.setCode(input.getCode());
         submission.setActiveContestId(input.getActiveContestId());
         submission.setLanguageId(input.getLanguageId());
+        submission.setStatus(SubmissionResult.PENDING);
+        submission.setState(SubmissionState.CREATED);
 
         Submission savedSubmission = submissionRepository.save(submission);
+        log.info("Created submission {} for problem {}, user {}",
+                savedSubmission.getId(), problem.getId(), userId);
 
-        List<Judge0Submission> judge0Submissions = createJudge0Submissions(
-                problemDetails,
-                fullCode,
-                input.getLanguageId().toString(),
-                savedSubmission.getId()
-        );
+        // Get basic user info for the response
+        User user = userRepository.findById(userId)
+                .orElseThrow(() -> new ResourceNotFoundException("User", "id", userId));
 
-        List<Judge0Response> judge0Responses = submitToJudge0(judge0Submissions);
+        // Create initial DTO with no test cases yet
+        SubmissionDetailDto initialResponse = submissionMapper.toSubmissionDetailDto(
+                savedSubmission, problem, user, Collections.emptyList());
 
-        List<TestCase> testcases = createTestcases(judge0Responses, savedSubmission);
-        savedSubmission.setTestcases(testcases);
+        // Process the submission asynchronously to improve response time
+        CompletableFuture.runAsync(() -> {
+            try {
+                processSubmission(savedSubmission, problem, input.getLanguageId());
+            } catch (Exception e) {
+                log.error("Error processing submission {}: {}", savedSubmission.getId(), e.getMessage(), e);
+                updateSubmissionState(savedSubmission.getId(), SubmissionState.FAILED);
+            }
+        });
 
-        savedSubmission = submissionRepository.save(savedSubmission);
-
-        Submission finalSavedSubmission = savedSubmission;
-        Problem submissionProblem = problemRepository.findById(savedSubmission.getProblemId())
-                .orElseThrow(() -> new ResourceNotFoundException("Problem", "id", finalSavedSubmission.getProblemId()));
-
-        User submissionUser = userRepository.findById(savedSubmission.getUserId())
-                .orElseThrow(() -> new ResourceNotFoundException("User", "id", finalSavedSubmission.getUserId()));
-
-        List<TestCaseDto> testCaseDtos = savedSubmission.getTestcases().stream()
-                .map(submissionMapper::toTestCaseDto)
-                .collect(Collectors.toList());
-
-        return submissionMapper.toSubmissionDetailDto(savedSubmission, submissionProblem, submissionUser, testCaseDtos);
+        return initialResponse;
     }
 
     @Override
@@ -101,6 +112,13 @@ public class SubmissionServiceImpl implements SubmissionService {
             throw new BadRequestException("Invalid submission id");
         }
 
+        // Check cache first
+        Optional<SubmissionDetailDto> cachedResult = cacheService.getCachedSubmissionResult(submissionId);
+        if (cachedResult.isPresent()) {
+            return cachedResult.get();
+        }
+
+        // If not in cache, get from database
         Submission submission = submissionRepository.findByIdWithTestcases(submissionId)
                 .orElseThrow(() -> new ResourceNotFoundException("Submission", "id", submissionId));
 
@@ -112,34 +130,54 @@ public class SubmissionServiceImpl implements SubmissionService {
 
         List<TestCaseDto> testCaseDtos = submission.getTestcases().stream()
                 .map(submissionMapper::toTestCaseDto)
-                .toList();
+                .collect(Collectors.toList());
 
-        return submissionMapper.toSubmissionDetailDto(submission, problem, user, testCaseDtos);
+        SubmissionDetailDto result = submissionMapper.toSubmissionDetailDto(
+                submission, problem, user, testCaseDtos);
+
+        // Cache the result if submission is complete
+        if (submission.getState() == SubmissionState.COMPLETED) {
+            cacheService.cacheSubmissionResult(result);
+        }
+
+        return result;
     }
 
     @Override
     public List<SubmissionResponseDto> getUserSubmissionsForProblem(String userId, String problemId) {
         List<Submission> submissions = submissionRepository.findByUserIdAndProblemIdOrderByCreatedAtDesc(userId, problemId);
 
-        List<String> problemIds = submissions.stream()
+        // Get all unique problem IDs
+        Set<String> problemIds = submissions.stream()
                 .map(Submission::getProblemId)
-                .distinct()
-                .collect(Collectors.toList());
+                .collect(Collectors.toSet());
 
-        List<Problem> problems = problemRepository.findAllById(problemIds);
-
-        Map<String, Problem> problemMap = problems.stream()
+        Map<String, Problem> problemMap = problemRepository.findAllById(problemIds).stream()
                 .collect(Collectors.toMap(Problem::getId, p -> p));
 
         return submissions.stream()
                 .map(submission -> {
                     Problem problem = problemMap.get(submission.getProblemId());
+
+                    // Calculate test case stats
                     int totalTestCases = submission.getTestcases() != null ? submission.getTestcases().size() : 0;
                     int passedTestCases = submission.getTestcases() != null ?
-                            (int) submission.getTestcases().stream().filter(tc -> tc.getStatus_id() == 3).count() : 0;
-                    return submissionMapper.toSubmissionResponseDto(submission, problem, passedTestCases, totalTestCases);
+                            (int) submission.getTestcases().stream()
+                                    .filter(tc -> tc.getStatusId() != null && tc.getStatusId() == 3)
+                                    .count() : 0;
+
+                    return submissionMapper.toSubmissionResponseDto(
+                            submission, problem, passedTestCases, totalTestCases);
                 })
                 .collect(Collectors.toList());
+    }
+
+    private void processSubmission(Submission submission, Problem problem, LanguageId languageId) {
+        try {
+            updateSubmissionState(submission.getId(), SubmissionState.SUBMITTED);
+
+            // Get problem details 
+        }
     }
 
     private List<Judge0Submission> createJudge0Submissions(
